examples/errors/e0116.sdm
module example <https://example.com/api> is

  class Foo(T)

  structure Bar is
    name -> Foo
  end

end
